# EcommerceTest

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
src/: base_test.py
src/pages/: cart_page.py  checkout_page.py  login_page.py  main_page.py
src/utils/: data.py
tests/: conftest.py  test_1.py  test_2.py  test_3.py  test_4.py
